--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
     hooks:
       - id: requirements
         name: requirements
-        entry: pip freeze > requirements.txt && git add requirements.txt
+        entry: bash -c 'pip freeze > requirements.txt; git add requirements.txt;'
         language: system
         pass_filenames: false
         stages: [commit]
