--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,10 +8,10 @@ repos:
         types: [python]
         args:
           [
-            "-rn",
-            "-sn",
-            "--rcfile=.pylintrc",
-            "--load-plugins=pylint.extensions.docparams"
+            "-rn", # Only display messages
+            "-sn", # Don't display the score
+            "--rcfile=.pylintrc", # Link to your config file
+            "--load-plugins=pylint.extensions.docparams", # Load an extension
           ]
   - repo: local
     hooks:
