--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==3.1.0
+beautifulsoup4==4.12.3
 certifi==2024.2.2
 cfgv==3.4.0
 charset-normalizer==3.3.2
@@ -22,6 +23,7 @@ PyYAML==6.0.1
 requests==2.31.0
 requests-mock==1.12.1
 setuptools==69.2.0
+soupsieve==2.5
 tomlkit==0.12.4
 urllib3==2.2.1
 virtualenv==20.25.1
